src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funraise Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fr_Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funraise Donor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funraise Donations</relationshipLabel>
        <relationshipName>fr_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fr_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>